[#20516] changed label of Rep field
(cherry picked from commit ff760d2f02d648bf6b363e7d7c58f99d65b16e0f)

--- a/bista_purchase/views/res_partner_views.xml
+++ b/bista_purchase/views/res_partner_views.xml
@@ -55,7 +55,7 @@
                     <field name="customer_service_hours" string="Hours (CS)"/>
                 </group>
                 <group>
-                    <field name="create_uid" string="Rep"/>
+                    <field name="create_uid" string="Created By"/>
                     <!-- <field name="write_uid" string="Last Modified By"/> -->
                     <field name="reviewed_date" string="Reviewed Date"/>
                     <!-- <field name="active" string="Status"/> -->
