--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -12,7 +12,7 @@
             </field>
             <field name="line_status" position="replace" />
             <xpath expr="//field[@name='invoice_status']" position="after">
-                <button name="open_po_line" type="object" icon="fa-history" class="btn btn-link" title="PO Line Status History" context="{'from_update_wiz': True, 'hide_back': True}"/>
+                <button name="open_po_line" type="object" icon="fa-history" class="btn btn-link" title="PO Line Status Notes History" context="{'from_update_wiz': True, 'hide_back': True}"/>
             </xpath>
         </field>
     </record>
